# mcp-router

./: .env  .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  CHANGELOG_AWS_MCP.md  CI_WORKFLOW_FIXES.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_README.md  Dockerfile  Dockerfile.backend  Makefile  README.md  TODO.txt  WORKFLOW_FIXES_SUMMARY.md  alembic.ini  babel.config.json  dev.sh  docker-compose.dev.yml  docker-compose.yml  integration_tests.sh  lighthouserc.js  package-lock.json  package.json  pyproject.toml  restructure.sh  run_tests.py  tsconfig.json
.cursor/rules/: 01-base-agentic.rules.mdc  01-base-design-patterns.rules.mdc  01-base-devops.rules.mdc  02-mcp-typescript.rules.mdc  03-cognitive-architecture.rules.mdc  03-composer-agent.rules.mdc  04-chain-of-thought-orchestrator.rules.mdc  04-security.rules.mdc  05-context-shepherd.rules.mdc  06-goal-decomposer.rules.mdc  (+13 more)
.devcontainer/: Dockerfile  devcontainer.json
Projects/: README.md
alembic/: README.md  env.py
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
config/: README.md  default.example.js  default.js
core/: __init__.py
docs/: ARCHITECTURE.html  ARCHITECTURE.md  INDEX.md  README.md  agent-patterns.md  aws-quickstart.md  developer-guide.md  docker-aws-setup.md  integration_technical_details.html  integration_technical_details.md  mcp-aws-tools.md  mcp_architecture.html  mcp_architecture.md  mcp_integration.html  mcp_integration.md  performance-testing-guide.md  proposed-architecture.html  proposed-architecture.md  refactoring-guide.md  refactoring.html  refactoring.md  system_integration.html  system_integration.md  testing-strategy.md  web.md  workflow-designer.md
frontend/: Dockerfile  README.md  package.json
integration-tests/: CONTAINERIZED-TESTING.md  Dockerfile.test  README.md  cypress.config.ts  docker-compose.test.yml  jest.api.config.js  jest.config.js  jest.e2e.config.js  package.json  setup.sh  tsconfig.json
nginx/: README.md
public/: index.html  workflow-designer.html
scripts/: check-circular-deps.js  fix-imports.js  generate-performance-report.js  git-workflow.sh  start.sh
services/: README.md  __init__.py  main.py  requirements.txt
src/: index.ts  index.tsx
tests/: README.md  conftest.py  test_metrics_collector.py  test_monitoring.py  test_protocol.py  test_security_manager.py  test_server.py  test_services.py  test_transport.py
(+115 files in other folders)
